--- a/index.html
+++ b/index.html
@@ -1,13 +1,11 @@
-<!doctype html>
-<html lang="ja">
-<head>
-	<meta charset="utf-8">
-	<title>Kodai ( @0918nobita )</title>
-</head>
-<body>
-	<div id="header">
-		<h1>Kodai</h1>
-	</div>
-	<div id="footer"></div>
-</body>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <title>homepage</title>
+  </head>
+  <body>
+    <div id="app"></div>
+    <script src="/dist/build.js"></script>
+  </body>
 </html>
